# twitter_notify

./: .env  accounts.db  accounts.txt  db.json  proxies.txt  proxy_checker.py  proxy_results.csv  pyproject.toml  runner.py
bot/: __main__.py  db.py  loader.py  proxy.py  utils.py  x_parser.py
